fixtures/python/fallback/should_fail/getattr_default.py
class Config:
    pass

cfg = Config()
debug = getattr(cfg, "debug", False)
